--- a/training_model.ipynb
+++ b/training_model.ipynb
@@ -19,10 +19,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size: 100000\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv',nrows=100000)\n",
-    "test_df = df.iloc[:100000]\n",
+    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 1000000)  # tot = 12,958,035\n",
+    "print('Size:', len(df))\n",
+    "test_df = df\n",
     "X = np.array(test_df.iloc[:,0])\n",
     "y = np.array(test_df.iloc[:,1])\n",
     "# dataset split\n",
@@ -49,7 +58,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training model...\n"
+      "Training model...\n",
+      "Initialising...\n"
      ]
     },
     {
@@ -57,115 +67,115 @@
      "output_type": "stream",
      "text": [
       "/home/arjun/AI_ENV/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/arjun/Desktop/GitHub/AI-Chess/ChessEngine.py:109: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:261.)\n",
-      "  X_encoded = torch.tensor([self.encode_fen(x) for x in X])\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:1/100  Loss:0.011269773356616497\n",
-      "Epoch:2/100  Loss:0.00927677657455206\n",
-      "Epoch:3/100  Loss:0.008878299966454506\n",
-      "Epoch:4/100  Loss:0.008627384901046753\n",
-      "Epoch:5/100  Loss:0.009256241843104362\n",
-      "Epoch:6/100  Loss:0.008690289221704006\n",
-      "Epoch:7/100  Loss:0.00787183828651905\n",
-      "Epoch:8/100  Loss:0.006659370381385088\n",
-      "Epoch:9/100  Loss:0.007335958536714315\n",
-      "Epoch:10/100  Loss:0.00741628697142005\n",
-      "Epoch:11/100  Loss:0.00713010411709547\n",
-      "Epoch:12/100  Loss:0.007269145920872688\n",
-      "Epoch:13/100  Loss:0.007479384541511536\n",
-      "Epoch:14/100  Loss:0.007233671378344297\n",
-      "Epoch:15/100  Loss:0.00614122161641717\n",
-      "Epoch:16/100  Loss:0.005096984561532736\n",
-      "Epoch:17/100  Loss:0.006054936908185482\n",
-      "Epoch:18/100  Loss:0.006626185495406389\n",
-      "Epoch:19/100  Loss:0.005060461349785328\n",
-      "Epoch:20/100  Loss:0.0064358641393482685\n",
-      "Epoch:21/100  Loss:0.004585104528814554\n",
-      "Epoch:22/100  Loss:0.004912158008664846\n",
-      "Epoch:23/100  Loss:0.005355381406843662\n",
-      "Epoch:24/100  Loss:0.004904103931039572\n",
-      "Epoch:25/100  Loss:0.0038491045124828815\n",
-      "Epoch:26/100  Loss:0.0036813460756093264\n",
-      "Epoch:27/100  Loss:0.003763963934034109\n",
-      "Epoch:28/100  Loss:0.003255837131291628\n",
-      "Epoch:29/100  Loss:0.0032579528633505106\n",
-      "Epoch:30/100  Loss:0.0027521238662302494\n",
-      "Epoch:31/100  Loss:0.0025586809497326612\n",
-      "Epoch:32/100  Loss:0.0024265609681606293\n",
-      "Epoch:33/100  Loss:0.0023143552243709564\n",
-      "Epoch:34/100  Loss:0.0017859515501186252\n",
-      "Epoch:35/100  Loss:0.0022616691421717405\n",
-      "Epoch:36/100  Loss:0.0017056275391951203\n",
-      "Epoch:37/100  Loss:0.0018320262897759676\n",
-      "Epoch:38/100  Loss:0.001650525606237352\n",
-      "Epoch:39/100  Loss:0.0016891829436644912\n",
-      "Epoch:40/100  Loss:0.0016187286237254739\n",
-      "Epoch:41/100  Loss:0.0015312879113480449\n",
-      "Epoch:42/100  Loss:0.0013881167396903038\n",
-      "Epoch:43/100  Loss:0.001227120403200388\n",
-      "Epoch:44/100  Loss:0.0011596784461289644\n",
-      "Epoch:45/100  Loss:0.0010514191817492247\n",
-      "Epoch:46/100  Loss:0.0010999662335962057\n",
-      "Epoch:47/100  Loss:0.001021652715280652\n",
-      "Epoch:48/100  Loss:0.000984272570349276\n",
-      "Epoch:49/100  Loss:0.0010017596650868654\n",
-      "Epoch:50/100  Loss:0.0009308671578764915\n",
-      "Epoch:51/100  Loss:0.0008784368983469903\n",
-      "Epoch:52/100  Loss:0.0007812061230652034\n",
-      "Epoch:53/100  Loss:0.0007557961507700384\n",
-      "Epoch:54/100  Loss:0.0007793934200890362\n",
-      "Epoch:55/100  Loss:0.0007359783048741519\n",
-      "Epoch:56/100  Loss:0.0006744692218489945\n",
-      "Epoch:57/100  Loss:0.000581484695430845\n",
-      "Epoch:58/100  Loss:0.0005365565302781761\n",
-      "Epoch:59/100  Loss:0.0006298925145529211\n",
-      "Epoch:60/100  Loss:0.0006859604618512094\n",
-      "Epoch:61/100  Loss:0.000576435646507889\n",
-      "Epoch:62/100  Loss:0.0005874944617971778\n",
-      "Epoch:63/100  Loss:0.00047738751163706183\n",
-      "Epoch:64/100  Loss:0.000582637672778219\n",
-      "Epoch:65/100  Loss:0.0005102990544401109\n",
-      "Epoch:66/100  Loss:0.0004780324816238135\n",
-      "Epoch:67/100  Loss:0.0004721060977317393\n",
-      "Epoch:68/100  Loss:0.0004207433667033911\n",
-      "Epoch:69/100  Loss:0.0005207642097957432\n",
-      "Epoch:70/100  Loss:0.0004386069194879383\n",
-      "Epoch:71/100  Loss:0.00046584405936300755\n",
-      "Epoch:72/100  Loss:0.00044865853851661086\n",
-      "Epoch:73/100  Loss:0.0003765473375096917\n",
-      "Epoch:74/100  Loss:0.0003985895018558949\n",
-      "Epoch:75/100  Loss:0.0003259899967815727\n",
-      "Epoch:76/100  Loss:0.0003615936147980392\n",
-      "Epoch:77/100  Loss:0.0003537772863637656\n",
-      "Epoch:78/100  Loss:0.0003012520610354841\n",
-      "Epoch:79/100  Loss:0.00034678701194934547\n",
-      "Epoch:80/100  Loss:0.0003326169971842319\n",
-      "Epoch:81/100  Loss:0.0003132258716505021\n",
-      "Epoch:82/100  Loss:0.0003378765832167119\n",
-      "Epoch:83/100  Loss:0.00032382397330366075\n",
-      "Epoch:84/100  Loss:0.0002497688983567059\n",
-      "Epoch:85/100  Loss:0.00027233074069954455\n",
-      "Epoch:86/100  Loss:0.00024136730644386262\n",
-      "Epoch:87/100  Loss:0.00025452650152146816\n",
-      "Epoch:88/100  Loss:0.00026705124764703214\n",
-      "Epoch:89/100  Loss:0.00027188914828002453\n",
-      "Epoch:90/100  Loss:0.0002179902803618461\n",
-      "Epoch:91/100  Loss:0.00019790561054833233\n",
-      "Epoch:92/100  Loss:0.00022225147404242307\n",
-      "Epoch:93/100  Loss:0.0002117644326062873\n",
-      "Epoch:94/100  Loss:0.00020909258455503732\n",
-      "Epoch:95/100  Loss:0.00020090601174160838\n",
-      "Epoch:96/100  Loss:0.0002337892510695383\n",
-      "Epoch:97/100  Loss:0.00018946072668768466\n",
-      "Epoch:98/100  Loss:0.00021043349988758564\n",
-      "Epoch:99/100  Loss:0.0001758862636052072\n",
-      "Epoch:100/100  Loss:0.00020869197032880038\n"
+      "torch.float32 torch.float32\n",
+      "Training...\n",
+      "Epoch: 1/100   Loss: 90.66246795654297\n",
+      "Epoch: 2/100   Loss: 85.05168914794922\n",
+      "Epoch: 3/100   Loss: 72.9264907836914\n",
+      "Epoch: 4/100   Loss: 80.56375885009766\n",
+      "Epoch: 5/100   Loss: 84.53398132324219\n",
+      "Epoch: 6/100   Loss: 80.23025512695312\n",
+      "Epoch: 7/100   Loss: 84.07978820800781\n",
+      "Epoch: 8/100   Loss: 76.74897766113281\n",
+      "Epoch: 9/100   Loss: 75.43316650390625\n",
+      "Epoch: 10/100   Loss: 71.85536193847656\n",
+      "Epoch: 11/100   Loss: 68.39509582519531\n",
+      "Epoch: 12/100   Loss: 72.58100891113281\n",
+      "Epoch: 13/100   Loss: 67.87922668457031\n",
+      "Epoch: 14/100   Loss: 54.73130798339844\n",
+      "Epoch: 15/100   Loss: 60.204410552978516\n",
+      "Epoch: 16/100   Loss: 55.62849044799805\n",
+      "Epoch: 17/100   Loss: 61.34291076660156\n",
+      "Epoch: 18/100   Loss: 53.97052001953125\n",
+      "Epoch: 19/100   Loss: 50.83488845825195\n",
+      "Epoch: 20/100   Loss: 50.48925018310547\n",
+      "Epoch: 21/100   Loss: 50.33766174316406\n",
+      "Epoch: 22/100   Loss: 45.317848205566406\n",
+      "Epoch: 23/100   Loss: 37.95052719116211\n",
+      "Epoch: 24/100   Loss: 35.29954528808594\n",
+      "Epoch: 25/100   Loss: 31.016252517700195\n",
+      "Epoch: 26/100   Loss: 28.84726333618164\n",
+      "Epoch: 27/100   Loss: 27.694284439086914\n",
+      "Epoch: 28/100   Loss: 25.336902618408203\n",
+      "Epoch: 29/100   Loss: 24.23044776916504\n",
+      "Epoch: 30/100   Loss: 22.69550323486328\n",
+      "Epoch: 31/100   Loss: 20.612302780151367\n",
+      "Epoch: 32/100   Loss: 20.688400268554688\n",
+      "Epoch: 33/100   Loss: 14.616924285888672\n",
+      "Epoch: 34/100   Loss: 16.154191970825195\n",
+      "Epoch: 35/100   Loss: 15.181916236877441\n",
+      "Epoch: 36/100   Loss: 17.11337661743164\n",
+      "Epoch: 37/100   Loss: 13.966353416442871\n",
+      "Epoch: 38/100   Loss: 12.56902027130127\n",
+      "Epoch: 39/100   Loss: 11.728961944580078\n",
+      "Epoch: 40/100   Loss: 12.978951454162598\n",
+      "Epoch: 41/100   Loss: 10.026214599609375\n",
+      "Epoch: 42/100   Loss: 10.335554122924805\n",
+      "Epoch: 43/100   Loss: 10.261507034301758\n",
+      "Epoch: 44/100   Loss: 9.546284675598145\n",
+      "Epoch: 45/100   Loss: 9.175626754760742\n",
+      "Epoch: 46/100   Loss: 8.986345291137695\n",
+      "Epoch: 47/100   Loss: 9.031764030456543\n",
+      "Epoch: 48/100   Loss: 7.462940216064453\n",
+      "Epoch: 49/100   Loss: 8.40357780456543\n",
+      "Epoch: 50/100   Loss: 7.182255268096924\n",
+      "Epoch: 51/100   Loss: 7.529901027679443\n",
+      "Epoch: 52/100   Loss: 6.757997989654541\n",
+      "Epoch: 53/100   Loss: 5.382190227508545\n",
+      "Epoch: 54/100   Loss: 6.625823974609375\n",
+      "Epoch: 55/100   Loss: 6.355928421020508\n",
+      "Epoch: 56/100   Loss: 6.588369369506836\n",
+      "Epoch: 57/100   Loss: 5.627493858337402\n",
+      "Epoch: 58/100   Loss: 5.100900173187256\n",
+      "Epoch: 59/100   Loss: 4.6310577392578125\n",
+      "Epoch: 60/100   Loss: 5.954141139984131\n",
+      "Epoch: 61/100   Loss: 5.3638916015625\n",
+      "Epoch: 62/100   Loss: 4.729605674743652\n",
+      "Epoch: 63/100   Loss: 4.579832553863525\n",
+      "Epoch: 64/100   Loss: 4.67376708984375\n",
+      "Epoch: 65/100   Loss: 4.671114921569824\n",
+      "Epoch: 66/100   Loss: 4.360751628875732\n",
+      "Epoch: 67/100   Loss: 3.913337230682373\n",
+      "Epoch: 68/100   Loss: 3.5196073055267334\n",
+      "Epoch: 69/100   Loss: 4.163633823394775\n",
+      "Epoch: 70/100   Loss: 3.4040699005126953\n",
+      "Epoch: 71/100   Loss: 3.59218430519104\n",
+      "Epoch: 72/100   Loss: 3.698176860809326\n",
+      "Epoch: 73/100   Loss: 3.3962461948394775\n",
+      "Epoch: 74/100   Loss: 3.331069231033325\n",
+      "Epoch: 75/100   Loss: 3.000990390777588\n",
+      "Epoch: 76/100   Loss: 2.9304733276367188\n",
+      "Epoch: 77/100   Loss: 3.002927541732788\n",
+      "Epoch: 78/100   Loss: 2.7561399936676025\n",
+      "Epoch: 79/100   Loss: 3.0640289783477783\n",
+      "Epoch: 80/100   Loss: 2.6174471378326416\n",
+      "Epoch: 81/100   Loss: 2.744281053543091\n",
+      "Epoch: 82/100   Loss: 2.383970260620117\n",
+      "Epoch: 83/100   Loss: 2.4130167961120605\n",
+      "Epoch: 84/100   Loss: 2.478487014770508\n",
+      "Epoch: 85/100   Loss: 2.742246627807617\n",
+      "Epoch: 86/100   Loss: 2.2040059566497803\n",
+      "Epoch: 87/100   Loss: 2.1649868488311768\n",
+      "Epoch: 88/100   Loss: 2.7326505184173584\n",
+      "Epoch: 89/100   Loss: 2.1929736137390137\n",
+      "Epoch: 90/100   Loss: 2.0825600624084473\n",
+      "Epoch: 91/100   Loss: 2.1660711765289307\n",
+      "Epoch: 92/100   Loss: 2.323042154312134\n",
+      "Epoch: 93/100   Loss: 2.087547779083252\n",
+      "Epoch: 94/100   Loss: 1.9810521602630615\n",
+      "Epoch: 95/100   Loss: 1.9979795217514038\n",
+      "Epoch: 96/100   Loss: 1.8312000036239624\n",
+      "Epoch: 97/100   Loss: 2.135580539703369\n",
+      "Epoch: 98/100   Loss: 1.682485818862915\n",
+      "Epoch: 99/100   Loss: 1.7188611030578613\n",
+      "Epoch: 100/100   Loss: 1.770310878753662\n"
      ]
     },
     {
@@ -185,8 +195,27 @@
     "engine.train_chess_engine(X_train, y_train)\n",
     "\n",
     "# Loading previous model\n",
-    "# engine.model = joblib.load('Model_saves/Chess100kModel.joblib')\n",
-    "joblib.dump(engine.model, 'Model_saves/NewEncodingModel.joblib')\n"
+    "# engine.model = joblib.load('Model_saves/Chess100kModel.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Model_saves/NewEncodingModel_100k_acc_60.joblib']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(engine.model, 'Model_saves/NewEncodingModel_100k_acc_60.joblib')"
    ]
   },
   {
@@ -198,13 +227,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train set\n",
-      "Score: 67572/90000\n",
-      "Avg_loss 1.891446558551656e-08\n",
+      "Train set\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arjun/Desktop/GitHub/AI-Chess/ChessEngine.py:166: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:261.)\n",
+      "  X_encoded = torch.tensor([self.encode_fen(x) for x in X])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score: 68958/90000, Accuracy: 76.62%\n",
+      "Avg_loss 1.6429433081712987e-08\n",
       "\n",
       "Test set\n",
-      "Score: 5749/10000\n",
-      "Avg_loss 2.2265678271651267e-07\n"
+      "Score: 5884/10000, Accuracy: 58.84%\n",
+      "Avg_loss 2.098387572914362e-07\n"
      ]
     }
    ],
@@ -225,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[74.0244]], device='cuda:0', grad_fn=<MulBackward0>)\n"
+      "tensor([[54.1460]], device='cuda:0', grad_fn=<MulBackward0>)\n"
      ]
     }
    ],
