--- a/training_model.ipynb
+++ b/training_model.ipynb
@@ -12,24 +12,24 @@
     "from sklearn.model_selection import train_test_split\n",
     "import joblib\n",
     "from ChessEngine import Engine\n",
-    " "
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size: 1000000\n"
+      "Size: 500000\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 1000000)  # tot = 12,958,035\n",
+    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 500000)  # tot = 12,958,035\n",
     "print('Size:', len(df))\n",
     "test_df = df\n",
     "X = np.array(test_df.iloc[:,0])\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,87 +51,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# # Training\n",
-    "# print(\"Training model...\")\n",
-    "# engine.train_chess_engine(X_train, y_train)"
+    "print(\"Training model...\")\n",
+    "engine.train_chess_engine(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Loading previous model\n",
-    "engine.model = joblib.load('Model_saves/NewEncodingModel_1M.joblib')\n",
-    "print(engine.model)"
+    "loc = 'Model_saves/Chess500kModel.pt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Failed to load the model.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel loaded successfully!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 10\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFailed to load the model.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mValueError\u001b[0m: Failed to load the model."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import joblib\n",
-    "import torch\n",
-    "# Load the model from disk\n",
-    "engine.model = joblib.load('Model_saves/NewEncodingModel_1M.joblib')\n",
-    "\n",
-    "# Verify that the model was loaded correctly\n",
-    "if isinstance(engine.model, torch.nn.Module):\n",
-    "    print(\"Model loaded successfully!\")\n",
-    "else:\n",
-    "    raise ValueError(\"Failed to load the model.\")"
+    "torch.save(engine.model,loc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine.model = torch.load(loc)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# joblib.dump(engine.model, 'Model_saves/NewEncodingModel_1M.joblib')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,19 +106,13 @@
      "output_type": "stream",
      "text": [
       "Train set\n",
-      "Something wrong with ﻿+23\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Accuracy\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTrain set\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mengine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maccuracy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43my_train\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mTest set\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m engine\u001b[38;5;241m.\u001b[39maccuracy(X_test,y_test)\n",
-      "File \u001b[0;32m~/Desktop/GitHub/AI-Chess/ChessEngine.py:177\u001b[0m, in \u001b[0;36mEngine.accuracy\u001b[0;34m(self, X, y, device)\u001b[0m\n\u001b[1;32m    175\u001b[0m x_mod \u001b[38;5;241m=\u001b[39m x_mod\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m    176\u001b[0m y_mod \u001b[38;5;241m=\u001b[39m y_mod\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[0;32m--> 177\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx_mod\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mview(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m    178\u001b[0m sum_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m lossCategory(y_pred, y_mod)\n\u001b[1;32m    179\u001b[0m sum_correct \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39msum(torch\u001b[38;5;241m.\u001b[39mabs((y_mod \u001b[38;5;241m-\u001b[39m y_pred)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m9999\u001b[39m) \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m100\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+      "Score: 159178/450000, Accuracy: 35.37%\n",
+      "Avg_loss 1.1426479286617702e-06\n",
+      "\n",
+      "Test set\n",
+      "Something wrong with ﻿+23\n",
+      "Score: 17564/50000, Accuracy: 35.13%\n",
+      "Avg_loss 1.1734580993652345e-06\n"
      ]
     }
    ],
