Trying to rewrite efficient model

--- a/training_model.ipynb
+++ b/training_model.ipynb
@@ -17,19 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size: 500000\n"
+      "Size: 1000000\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 500000)  # tot = 12,958,035\n",
+    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 1000000)  # tot = 12,958,035\n",
     "print('Size:', len(df))\n",
     "test_df = df\n",
     "X = np.array(test_df.iloc[:,0])\n",
@@ -41,12 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "board = chess.Board()\n",
     "engine = Engine(board)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loc = 'Model_saves/Chess1MModel.pt'"
    ]
   },
   {
@@ -58,15 +67,6 @@
     "# # Training\n",
     "print(\"Training model...\")\n",
     "engine.train_chess_engine(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loc = 'Model_saves/Chess500kModel.pt'"
    ]
   },
   {
@@ -91,9 +91,19 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded successfully\n"
+     ]
+    }
+   ],
    "source": [
-    "engine.model = torch.load(loc)"
+    "engine.model = torch.load(loc)\n",
+    "if engine.model: print(\"Loaded successfully\")\n",
+    "else: raise Exception('ModelLoadingFailed') "
    ]
   },
   {
@@ -106,13 +116,13 @@
      "output_type": "stream",
      "text": [
       "Train set\n",
-      "Score: 159178/450000, Accuracy: 35.37%\n",
-      "Avg_loss 1.1426479286617702e-06\n",
+      "Something wrong with ﻿+23\n",
+      "Score: 470092/900000, Accuracy: 52.23%\n",
+      "Avg_loss 1.2073371145460341e-07\n",
       "\n",
       "Test set\n",
-      "Something wrong with ﻿+23\n",
-      "Score: 17564/50000, Accuracy: 35.13%\n",
-      "Avg_loss 1.1734580993652345e-06\n"
+      "Score: 52595/100000, Accuracy: 52.59%\n",
+      "Avg_loss 1.2638722546398639e-07\n"
      ]
     }
    ],
@@ -126,13 +136,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[37.8587]], device='cuda:0', grad_fn=<MulBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/arjun/Desktop/GitHub/AI-Chess/ChessEngine.py:135: UserWarning: Creating a tensor from a list of numpy.ndarrays is extremely slow. Please consider converting the list to a single numpy.ndarray with numpy.array() before converting to a tensor. (Triggered internally at ../torch/csrc/utils/tensor_new.cpp:261.)\n",
+      "  X_encoded = torch.tensor([self.encode_fen(x) for x in X]).to(self.device)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Inference\n",
-    "out = engine.run_engine(['rnbqkbnr/pppp1ppp/4p3/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2']) * 9999\n",
+    "out = engine.run_engine(['rnbqkbnr/pppp1ppp/4p3/8/4P3/8/PPPP1PPP/RNBQKBNR w KQkq - 0 2'], loc) * 9999\n",
     "print(out)"
    ]
   },
