Gonna train big boy

--- a/training_model.ipynb
+++ b/training_model.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 1000000)  # tot = 12,958,035\n",
+    "df = pd.read_csv('/home/arjun/Desktop/Datasets/chessData.csv', nrows = 1500000)  # tot = 12,958,035\n",
     "print('Size:', len(df))\n",
     "test_df = df\n",
     "X = np.array(test_df.iloc[:,0])\n",
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loc = 'Model_saves/Chess1MModel.pt'"
+    "loc = 'Model_saves/Chess1-5MModel.pt'"
    ]
   },
   {
@@ -107,7 +107,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# Inference\n",
